infra/longhorn/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.stadthagen.dev`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-tls
